--- a/productos/src/main/resources/application.properties
+++ b/productos/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+management.endpoints.web.exposure.include=*
