Error control added

--- a/productos/src/main/resources/application.properties
+++ b/productos/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://postgres:5432/product
+spring.datasource.url=jdbc:postgresql://localhost:5432/product
 spring.datasource.username=postgres
 spring.datasource.password=javeriana123
 spring.jpa.show-sql=true
