--- a/productos/pom.xml
+++ b/productos/pom.xml
@@ -48,7 +48,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.eclipse.microprofile.fault-tolerance</groupId>
+            <artifactId>microprofile-fault-tolerance-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
