Changed jar name

--- a/productos/Dockerfile
+++ b/productos/Dockerfile
@@ -6,5 +6,5 @@ COPY ./src ./src
 RUN mvn clean package -Dmaven.test.skip=true
 
 FROM openjdk:11.0.5-jre-slim-buster
-COPY --from=builder /build/target/productos-0.0.1-SNAPSHOT.jar .
-ENTRYPOINT java -Djava.net.preferIPv4Stack=true -jar ./productos-0.0.1-SNAPSHOT.jar
+COPY --from=builder /build/target/products-0.0.1-SNAPSHOT.jar .
+ENTRYPOINT java -Djava.net.preferIPv4Stack=true -jar ./products-0.0.1-SNAPSHOT.jar
